This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
7/19/17: Stopped it from turning off Low Dose when switching back to a montage
file after changing the Record binning (In 3.6).

7/14/17: Added ability to align subset of frames either in plugin or in IMOD
when saving K2 frames.

7/14/17: Added ability to restrict frame alignment parameters to 4K or 8K
frames, or to aligning in plugin versus IMOD, with some automatic switching
when appropriate.

7/14/17: SEM_3-6-11
7/14/17: Fixed setting of diffraction focus on JEOLs (In 3.6).

7/14/17: Fix specimen dose estimates to not add "extra beam time" for cameras
where it does not apply (In 3.6).

7/14/17: Fix crash when making montage overview with shifts bigger than the
area being put into the overview (In 3.6).

7/13/17: Clear out long summed frame lists and give a message saying to set
them up again (In 3.6).

7/9/17: SEM_3-6-10
7/8/17: Add Navigator option to all current Low Dose parameters to be used
instead of the map parameters for Realign to Item.

7/7/17: Fix fitting of View mode montage to polygon and drawing of Trial/Focus
areas on View image to take account of high defocus mag calibration (In 3.6).

7/5/17: In Navigator Acquire at Items, added options for doing a subset of
items, skipping stage move if possible, and skipping stage move in Z.  There
is also a script command to enable skipping the stage move.


7/4/17: Fixed tilt series variations dialog to constrain exposure time series
to multiple of frame time for Falcon and DE cameras (In 3.6).

7/4/17: Added to mdoc file the dose per frame when frames saved, and
prior cumulative dose in Record area for tilt series images.

7/3/17: Added special option to normalize all lenses when changing mag within