@@ -2576,6 +2576,12 @@
             milliseconds.&nbsp; The default is 0, which means to use the time set by 
             &#39;StageMoveDelay&#39;, whose default is 2000.</TD>
         </TR>
+        <TR VALIGN="top">
+          <TD>StageTimeoutFactor</TD>
+          <TD>Factor by which to multiply allowed time for stage movements to complete; 
+            default is 1.&nbsp; Originally applied only to stage movements in eucentricity 
+            tasks, additional applications will be added as needed.</TD>
+        </TR>
       </TABLE>
       <BR>
       <P><A NAME="tsc_properties"></A><B>Tilt series controller properties</B></P>
