@@ -3,6 +3,11 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+7/21/17: Added property for increasing stage timeout time (In 3.6).
+
+7/20/17: Added test that spot size was successfully set for the calibration
+routines that step through spots (In 3.6).
+
 7/19/17: Stopped it from turning off Low Dose when switching back to a montage
 file after changing the Record binning (In 3.6).
 
